# gimpsep-pmig

./: .gitignore  Project.sln  Project.vcxproj  Project.vcxproj.filters
gimpsep-pmig/: CMakeLists.txt
gimpsep-pmig/x64/Debug/Project.tlog/: link.command.1.tlog
src/: Image.cpp  Image.h  Main.cpp
x64/Debug/: Project.exe.recipe  Project.ilk  vc142.idb
x64/Debug/Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
